--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "timeline",
+  "name": "timeline-plus",
   "version": "1.0.0",
-  "description": "[![Backers on Open Collective](https://opencollective.com/vis/backers/badge.svg)](#backers) [![Sponsors on Open Collective](https://opencollective.com/vis/sponsors/badge.svg)](#sponsors) [![Join the chat at https://gitter.im/timeline-js/Lobby](https://badges.gitter.im/timeline-js/Lobby.svg)](https://gitter.im/timeline-js/Lobby?utm_source=badge&utm_medium=badge&utm_campaign=pr-badge&utm_content=badge)",
+  "description": "",
   "main": "./dist/timeline.js",
   "directories": {
     "doc": "docs",
