Remove graph2d stuff

--- a/.eslintrc
+++ b/.eslintrc
@@ -26,8 +26,8 @@
     "require-jsdoc": ["error", {
         "require": {
             "FunctionDeclaration": true,
-            "MethodDefinition": true,
-            "ClassDeclaration": true,
+            "MethodDefinition": false,
+            "ClassDeclaration": false,
             "ArrowFunctionExpression": false
         }
     }],
