--- a/lib/timeline/.eslintrc
+++ b/lib/timeline/.eslintrc
@@ -18,21 +18,7 @@
     "max-statements": [2, 115],
     "no-unreachable": 1,
     "no-useless-escape": 0,
-    "no-console": 0,
-    "require-jsdoc": ["error", {
-        "require": {
-            "FunctionDeclaration": true,
-            "MethodDefinition": true,
-            "ClassDeclaration": true,
-            "ArrowFunctionExpression": true
-        }
-    }],
-    "valid-jsdoc": [2, {
-      "requireReturnDescription": false,
-      "requireReturn": false,
-      "requireParamDescription": false,
-      "requireReturnType": true
-      }],
+    "no-console": 0
     }
     // To flag presence of console.log without breaking linting:
     //"no-console": ["warn", { allow: ["warn", "error"] }],
