--- a/docs/package.json
+++ b/docs/package.json
@@ -2,6 +2,7 @@
   "name": "website",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://yotamberk.github.io/timeline-plus",
   "dependencies": {
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
