--- a/docs/package.json
+++ b/docs/package.json
@@ -4,8 +4,11 @@
   "private": true,
   "homepage": "http://yotamberk.github.io/timeline-plus",
   "dependencies": {
+    "@material-ui/core": "^3.1.1",
+    "@material-ui/icons": "^3.0.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4"
   },
   "scripts": {
