--- a/docs/package.json
+++ b/docs/package.json
@@ -8,12 +8,13 @@
     "@material-ui/icons": "^3.0.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-iframe": "^1.3.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "npm run build  --prefix ../ && cp -R ../dist ./public/ && cp -R ../examples ./public/ && react-scripts start",
+    "build": "npm run build  --prefix ../ && cp -R ../dist ./public/ && cp -R ../examples ./public/&& react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
