--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lint": "gulp lint",
     "watch": "gulp watch",
     "watch-dev": "gulp watch --bundle",
+    "prepublishOnly": "npm run build",
     "predeploy": "npm run build --prefix ./docs",
     "deploy": "gh-pages -d ./docs/build"
   },
