--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-  "presets": ["env"],
+  "presets": ["env", "@babel/polyfill"],
   "plugins": [
     "transform-es3-property-literals",
     "transform-es3-member-expression-literals",
