--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "deploy": "gh-pages -d ./docs/build"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.2.5",
     "emitter-component": "^1.1.1",
     "hammerjs": "^2.0.8",
     "keycharm": "^0.2.0",
@@ -44,19 +43,20 @@
     "timsort": "^0.3.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-transform-runtime": "^7.2.0",
+    "@babel/polyfill": "^7.2.5",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/runtime": "^7.2.0",
     "async": "^2.5.0",
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.1",
+    "babel-cli": "^6.26.0",
+    "babel-loader": "^8.0.5",
     "babel-plugin-transform-es3-member-expression-literals": "^6.22.0",
     "babel-plugin-transform-es3-property-literals": "^6.22.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-runtime": "^6.23.0",
     "babelify": "^7.3.0",
     "clean-css": "^4.1.7",
     "eslint": "^4.3.0",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.0",
     "gulp-clean-css": "^3.7.0",
     "gulp-concat": "^2.6.1",
     "gulp-eslint": "^4.0.0",
@@ -66,7 +66,7 @@
     "jsdom": "11.3.0",
     "jsdom-global": "^3.0.2",
     "merge-stream": "^1.0.1",
-    "mocha": "^3.4.2",
+    "mocha": "^5.2.0",
     "nyc": "^11.2.1",
     "rimraf": "^2.6.1",
     "uglify-js": "^2.8.29",
