Fix gulp and babelrc to new versions

--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-  "presets": ["@babel/env", "@babel/polyfill"],
+  "presets": ["@babel/env"],
   "plugins": [
     "transform-es3-property-literals",
     "transform-es3-member-expression-literals",
