--- a/.babelrc
+++ b/.babelrc
@@ -3,6 +3,7 @@
   "plugins": [
     "transform-es3-property-literals",
     "transform-es3-member-expression-literals",
-    "@babel/plugin-transform-runtime"
+    "@babel/plugin-transform-runtime",
+	 ["js-logger", {"variable" : "L"}]
   ]
 }
