--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "mocha": "^5.2.0",
     "nyc": "^11.2.1",
     "rimraf": "^2.6.1",
+    "testcafe": "^0.23.3",
     "uglify-js": "^2.8.29",
     "uuid": "^3.1.0",
     "webpack": "^3.3.0",
