--- a/package.json
+++ b/package.json
@@ -47,10 +47,11 @@
     "@babel/core": "^7.2.2",
     "@babel/plugin-transform-runtime": "^7.2.0",
     "@babel/polyfill": "^7.2.5",
-    "@babel/preset-env": "^7.2.3",
+    "@babel/preset-env": "^7.3.1",
     "@babel/runtime": "^7.2.0",
     "async": "^2.5.0",
     "babel-cli": "^6.26.0",
+    "babel-jest": "^24.0.0",
     "babel-loader": "^8.0.5",
     "babel-plugin-js-logger": "^1.0.17",
     "babel-plugin-transform-es3-member-expression-literals": "^6.22.0",
@@ -64,6 +65,7 @@
     "gulp-eslint": "^4.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-util": "^3.0.8",
+    "jest": "^24.0.0",
     "jsdoc": "^3.5.5",
     "jsdom": "11.3.0",
     "jsdom-global": "^3.0.2",
