--- a/package.json
+++ b/package.json
@@ -78,5 +78,8 @@
     "uuid": "^3.1.0",
     "webpack": "^3.3.0",
     "yargs": "^8.0.2"
+  },
+  "scripts" : {
+    "test" : "testcafe chrome tests/UI/"
   }
 }
