--- a/package.json
+++ b/package.json
@@ -20,9 +20,7 @@
     "url": "git+https://github.com/yotamberk/timeline-plus.git"
   },
   "author": "",
-  "contributors": [
-    "RylandCai <ryland.cai@philips.com>"
-  ],
+  "contributors": [],
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/yotamberk/timeline-plus/issues"
